...
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Digite o seu peso:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfj-MO-oU1">
                                                                <rect key="frame" x="0.0" y="0.0" width="398" height="39.666666666666664"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                                <nil key="textColor"/>
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="ex: 56,5" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Upv-nV-oJg">
                                                                <rect key="frame" x="0.0" y="53.666666666666657" width="398" height="39.333333333333343"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
                                                            </textField>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Digite a sua altura:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clX-n4-3lw">
                                                                <rect key="frame" x="0.0" y="107" width="398" height="39.666666666666657"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                                <nil key="textColor"/>
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="ex: 1,82" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ib7-qm-REn">
                                                                <rect key="frame" x="0.0" y="160.66666666666666" width="398" height="39.333333333333343"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
                                                            </textField>
                                                        </subviews>
                                                        <constraints>
...
                                                <rect key="frame" x="82" y="684" width="250" height="44"/>
                                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="0UO-J3-1Pt"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                <state key="normal" title="Calcular">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="calculateBMI:" destination="bqo-ML-fVr" eventType="touchUpInside" id="9O9-ap-80a"/>
                                                </connections>
                                            </button>
...
